cmake_minimum_required(VERSION 3.8)
project(LeetCode)
add_executable(longest-common-prefix src/longest-common-prefix.cpp)
add_executable(palindrome-number src/palindrome-number.cpp)
add_executable(integer-to-roman src/integer-to-roman.cpp)
add_executable(twoSum src/twoSum.cpp)
add_executable(add-two-numbers src/add-two-numbers.cpp)
